# publication-planner

./: .gitignore  .pylintrc  CHART_TEST_OUTPUTS_README.md  README.md  README.quickstart.md  README_REFACTORED.md  TODO.md  TYPING_UPDATE_SUMMARY.md  capture_timeline.py  check_errors.py  comprehensive_timeline_test.py  config.json  count_data.py  debug_chart_issues.py  demo_default_config.py  example_usage.py  fix_dates.py  generate_schedule.py  inspect_app.py  inspect_chart.py  missing_tests_analysis.md  project_imports.py  prompt.md  pyproject.toml  rename_files.py  requirements.txt  run_tests.py  run_timeline.py  run_web_app.py  run_web_charts.py  run_web_dashboard.py  run_web_timeline.py  temp.md  temp_generate_schedule.py  test_chart_visual.py  test_debug.py  test_direct_png.py  test_gantt_with_real_data.py  test_import.py  test_png_generation.py  (+4 more)
app/: __init__.py  exporters.py  main.py  main_dashboard.py  main_timeline.py  models.py  storage.py
app/assets/: custom.css  style.css
app/callbacks/: __init__.py
app/components/: __init__.py  metrics_chart.py
app/layouts/: __init__.py  header.py  main_content.py  sidebar.py
app/utils/: __init__.py
backend/: .gitignore  DATA_CONSISTENCY_SUMMARY.md  README.md  analyze_field_usage.py  config.json  data_validation_schema.json  ensure_data_consistency.py  env.template  env_template.txt  generate_schedule.py  pyproject.toml  requirements.txt  run_backend.py  run_backend_clean.py  setup_dev.py  test_database.py  validate_data_consistency.py
backend/data/: blackout.json  conferences.json  config.json  ed_papers.json  mod_papers.json
backend/exports/: schedule.csv
backend/src/: analytics.py  console.py  planner.py  reports.py  schedule_analysis.py  tables.py
backend/src/charts/: calculator.py
backend/src/core/: config.py  constants.py  dates.py  env.py  models.py
backend/src/database/: __init__.py  session.py  sqlmodels.py
backend/src/exporters/: csv_exporter.py
backend/src/generators/: schedule.py
backend/src/monitoring/: progress.py  rescheduler.py
backend/src/schedulers/: backtracking.py  base.py  greedy.py  heuristic.py  lookahead.py  optimal.py  random.py  stochastic.py
backend/src/scoring/: efficiency.py  penalties.py  quality.py
backend/src/validation/: blackout.py  config.py  constants.py  data_consistency.py  deadline.py  dependencies.py  resources.py  schedule.py  scheduler.py  submission.py  venue.py
backend/tests/: conftest.py  test_cli_integration.py  test_planner.py
backend/tests/analytics/: test_analytics.py  test_console.py  test_reports.py  test_tables.py
backend/tests/analytics/exporters/: test_csv_exporter.py
backend/tests/analytics/formatters/: test_dates.py
backend/tests/analytics/generators/: test_schedule.py
backend/tests/common/: __init__.py  headless_browser.py  test_headless_browser.py  tests_config.json
backend/tests/common/data/: conferences.json  config.json  ed_papers.json  mod_papers.json
backend/tests/core/: test_config.py  test_constants.py  test_dates.py  test_models.py
backend/tests/schedulers/: test_backtracking.py  test_base.py  test_greedy.py  test_heuristic.py  test_lookahead.py  test_optimal.py  test_optimal_comprehensive.py  test_optimal_edge_cases.py  test_optimal_minimal.py  test_random.py  test_scheduler_integration.py  test_stochastic.py
backend/tests/scoring/: test_efficiency.py  test_penalties.py  test_quality.py
backend/tests/src/: conftest.py
backend/tests/validation/: test_blackout.py  test_config.py  test_constants.py  test_deadline.py  test_dependencies.py  test_resources.py  test_schedule.py  test_scheduler.py  test_submission.py  test_venue.py
data/: conferences.json  config.json  ed_papers.json  mods.json  papers.json
docs/: EndoscopeAI_Publication_Master.md  README.detailed.md  REVIEW_FINDINGS.md  TODO.md  papers.mermaid  schedule.md  scheduler_architecture.md
frontend/: README.md  env.template  env.txt  env_template.txt  pyproject.toml  run_frontend.py  server.py  test_gantt_isolated.py  test_minimal.py
frontend/app/: database.py  env.py  main.py  models.py  storage.py
frontend/app/assets/: style.css
frontend/app/assets/demo/: README.md
frontend/app/assets/demo/data/: blackout.json  conferences.json
frontend/app/components/dashboard/: chart.py  layout.py
frontend/app/components/exporter/: __init__.py
frontend/app/components/exporters/: __init__.py
frontend/app/components/gantt/: activity.py  chart.py  layout.py  sample.py  timeline.py
frontend/app/components/metrics/: chart.py  layout.py
frontend/tests/: conftest.py  test_main.py  test_models.py  test_storage.py
frontend/tests/components/dashboard/: test_chart.py  test_dashboard.py
frontend/tests/components/gantt/: test_activity.py  test_chart.py  test_layout.py  test_timeline.py  test_visual_verification.py
frontend/tests/components/metrics/: test_chart.py
scripts/: archive_source.py  concat_source.py  copy_package.py  generate_chart_png.py
src/: __init__.py  cli.py  config.py  constraints.py  loader.py  models.py  planner.py  plots.py  scheduler.py  tables.py  type.py
src/analytics/: analytics.py  console.py  reports.py  schedule_analysis.py  tables.py
src/cli/: parser.py  runner.py  validator.py
src/core/: __init__.py  config.py  constants.py  constraints.py  dates.py  models.py  types.py
src/metrics/: README.md  __init__.py  constraints.py  deadlines.py  makespan.py  penalties.py  quality.py  utilization.py
src/monitoring/: progress.py  rescheduler.py
src/output/: __init__.py  analytics.py  console.py  file_manager.py  generate_planner.py  output_manager.py  plots.py  reports.py  schedule_reporter.py  tables.py
src/schedulers/: __init__.py  backtracking.py  base.py  greedy.py  heuristic.py  lookahead.py  optimal.py  random.py  stochastic.py
src/scoring/: __init__.py  aggregator.py  base.py  efficiency.py  metrics.py  penalties.py  penalty.py  (+1 more)
tests/: conftest.py  temp_config.json  test_config.py  test_dates.py  test_edge_cases.py  test_generate_schedule.py  test_planner.py  test_run_web_charts.py  test_run_web_dashboard.py
(+171 files in other folders)
