[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-planner"
version = "0.1.0"
description = "A paper planning and scheduling tool"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "plotly>=5.0.0",
    "dash>=2.0.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "python-dateutil>=2.8.0"
]

[tool.pylint]
extension-pkg-allow-list = ["cv2", "numpy", "dateutil"]
ignore = ["__pycache__"]

[tool.pylint.messages_control]
disable = [
  "invalid-name",
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "no-member",
  "unpacking-non-sequence",
  "multiple-statements",
  "redefined-outer-name",
  "broad-exception-caught",
  "unused-import",
  "import-outside-toplevel",
  "multiple-imports",
  "no-name-in-module",
  "import-error",
  "missing-final-newline",   # ignore C0304
  "trailing-whitespace",     # ignore C0303
  "attribute-defined-outside-init",  # ignore W0201 - allows inherited attributes
  "protected-access",        # ignore W0212 - allows access to protected methods
  "undefined-variable"       # ignore E0602 - allows undefined variable errors for imports
]

[tool.pylint.typecheck]
generated-members = [
  "cv2.*",
  "cv2.aruco.*"
]

# Better handling of inherited methods
ignored-modules = []
ignored-classes = []

[tool.pylint.format]
max-line-length = 250

[tool.pyright]
# stop errors about stub‐only or C‐extension modules
reportMissingModuleSource = false
reportMissingImports = false

# your existing venv and Python version settings
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

# Configure source paths for both src and app
analysis.extraPaths = ["src", "app"]

# have Pyright/Pylance use library code for types
analysis.useLibraryCodeForTypes = true

# Better inheritance handling
analysis.autoImportCompletions = true
analysis.typeCheckingMode = "basic"
analysis.autoSearchPaths = true

# Ignore specific inheritance-related errors
reportUnknownVariableType = false

# Plotly-specific type checking rules
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownParameterType = false
reportMissingTypeStubs = false

# Ignore Plotly's incomplete type annotations
reportGeneralTypeIssues = false

# Ignore Plotly's dynamic attribute access issues
reportUnknownMemberType = false
reportUnknownAttributeType = false
reportAttributeAccessIssue = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src", "app"]
addopts = "-v --tb=short --import-mode=importlib"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.pytest-timeout]
timeout = 15
timeout_method = "thread"
