[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-planner-frontend"
version = "0.1.0"
description = "Frontend for paper planning and scheduling tool"
requires-python = ">=3.8"
dependencies = [
    "plotly>=5.15.0",
    "dash>=2.14.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "python-dateutil>=2.8.0",
    "sqlmodel>=0.0.8"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app", "../backend/src", "tests"]
addopts = "-v --tb=short --import-mode=importlib"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.pytest-timeout]
timeout = 30
timeout_method = "thread"
